# baremetal_ddns

./: Cargo.toml  README.md
src/: main.rs
