[package]
name = "baremetal_ddns"
version = "0.1.0"
edition = "2021"
license = "wtfpl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
